--- a/rangiffler-client/src/styles/styles.scss
+++ b/rangiffler-client/src/styles/styles.scss
@@ -1,5 +1,6 @@
-@import url("./palette.scss");
+//@import url("./palette.scss");
 body {
-  background: #eeedea;
   color: #1a2721;
+  margin: 0;
+  padding: 0;
 }
