--- a/rangiffler-auth/src/main/resources/templates/login.html
+++ b/rangiffler-auth/src/main/resources/templates/login.html
@@ -3,7 +3,8 @@
 <head>
   <title>Login to Rangiffler</title>
   <link rel="icon" th:href="@{images/favicon.ico}"/>
-  <link href="../static/styles/styles.css" th:href="@{styles/styles.css}" rel="stylesheet" type="text/css"/>
+  <link href="../static/styles/styles.css" th:href="@{styles/styles.css}" rel="stylesheet"
+        type="text/css"/>
 </head>
 <body>
 <main class="content">
