--- a/rangiffler-auth/src/main/resources/templates/login.html
+++ b/rangiffler-auth/src/main/resources/templates/login.html
@@ -25,11 +25,19 @@
                     <p class="text-warning">You have been logged out.</p>
                 </div>
                 <label class="form__label">Username:
-                    <input class="form__input" type="text" name="username" placeholder="Type your username"
+                    <input class="form__input"
+                           type="text"
+                           name="username"
+                           placeholder="Type your username"
+                           autocomplete="false"
                            required/>
                 </label>
                 <label class="form__label">Password:
-                    <input class="form__input" type="password" name="password" placeholder="Type your password"
+                    <input class="form__input"
+                           type="password"
+                           name="password"
+                           placeholder="Type your password"
+                           autocomplete="false"
                            required/>
                     <button type="button" class="form__password-button"></button>
                 </label>
