--- a/rangiffler-auth/src/main/resources/static/styles/styles.css
+++ b/rangiffler-auth/src/main/resources/static/styles/styles.css
@@ -104,6 +104,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     font-weight: 400;
+    font-size: 14px;
 }
 
 .form__input {
