--- a/rangiffler-auth/src/main/resources/static/styles/styles.css
+++ b/rangiffler-auth/src/main/resources/static/styles/styles.css
@@ -189,7 +189,16 @@ body {
 }
 
 .form__paragraph_success {
-    margin-top: 120px;
+    margin-top: 60px;
+}
+
+.form__paragraph_link {
+    width: 100%;
+    text-align: center;
+}
+
+.form__paragraph_link .form_sign-in {
+    margin: 10px auto;
 }
 
 @media screen and (max-width: 900px) {
