--- a/rangiffler-gql-client/src/components/PhotoCard/styles.css
+++ b/rangiffler-gql-client/src/components/PhotoCard/styles.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 15rem;
     object-fit: cover;
+    box-sizing: border-box;
+    border-radius: 4px;
 }
 
 .photo-card__content {
